--- a/index.html
+++ b/index.html
@@ -1,234 +1,29 @@
+HTML:
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AGN</title>
-    <link rel="stylesheet" href="styles.css">  <!-- Enlazamos el archivo CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Escuadron Aragon</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h2>Deporte</h2>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 1</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Francos</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 2</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Sauks</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 3</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Teutones</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 4</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Galos</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 5</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Sumerios</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 6</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Apaches</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 7</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Siouxs</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 8</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-        <td><div class="checkbox-container"><span>Acadios</span><input type="checkbox" data-group="Acadios"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Bataks</td>
-    </tr>
-</table>
-<table id="tablaNombres">
-    <tr> <th colspan="5" class="tabla-title">Ronda 9</th> </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Teutones</span><input type="checkbox" data-group="Teutones"></div></td>
-        <td><div class="checkbox-container"><span>Siouxs</span><input type="checkbox" data-group="Siouxs"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Sauks</span><input type="checkbox" data-group="Sauks"></div></td>
-        <td><div class="checkbox-container"><span>Bataks</span><input type="checkbox" data-group="Bataks"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Galos</span><input type="checkbox" data-group="Galos"></div></td>
-        <td><div class="checkbox-container"><span>Apaches</span><input type="checkbox" data-group="Apaches"></div></td>
-    </tr>
-    <tr>
-        <td><div class="checkbox-container"><span>Francos</span><input type="checkbox" data-group="Francos"></div></td>
-        <td><div class="checkbox-container"><span>Sumerios</span><input type="checkbox" data-group="Sumerios"></div></td>
-    </tr>
-    <tr>
-        <td>Descansa</td>
-        <td>Acadios</td>
-    </tr>
-</table>
-<button id="procesar">Procesar</button>
-<h2>Puntos</h2>
-<table id="tabla-resultados">
-    <thead>
-      <tr>
-        <th>Escuadra</th>
-        <th>Ganadas</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
-<script src="script.js"></script>  <!-- Enlazamos el archivo JS -->
+<div class="sidebar">
+  <ul class="menu">
+    <li class="menu-item" onclick="toggleSubmenu(this)">
+      Deportes
+      <span class="arrow">&#9654;</span>
+      <ul class="submenu">
+        <li class="submenu-item"><a href="Trincheras.html">Trincheras</a></li>
+        <li class="submenu-item">Llanta</li>
+        <li class="submenu-item">Silbato</li>
+      </ul>
+    </li>
+  </ul>
+</div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
