--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ HTML:
       <span class="arrow">&#9654;</span>
       <ul class="submenu">
         <li class="submenu-item"><a href="Trincheras.html">Trincheras</a></li>
-        <li class="submenu-item">Llanta</li>
+        <li class="submenu-item"><a href="Llanta.html"></a>Llanta</li>
         <li class="submenu-item">Silbato</li>
       </ul>
     </li>
